--- a/src/app/paginas/PagVehiculo/PagVehiculo.component.html
+++ b/src/app/paginas/PagVehiculo/PagVehiculo.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header bg-primary text-white">
-    VEHÍCULO {{ vehiculo?.marca }} {{ vehiculo?.modelo }}
+    VEHÍCULO {{ vehiculo?.marca }} {{ vehiculo.modelo }}
   </div>
   <div class="card-body">
     <div class="row">
@@ -27,7 +27,7 @@
             <div *ngIf="esMarcaInvalida" class="invalid-feedback animation-class">
               La marca es requerida
             </div>
-            <span *ngIf="!modoEditar">{{ vehiculo?.marca }}</span>
+            <span *ngIf="!modoEditar">{{ vehiculo.marca }}</span>
           </div>
         </div>
         <!-- Modelo -->
@@ -40,7 +40,7 @@
             <div *ngIf="esModeloInvalido" class="invalid-feedback animation-class">
               El modelo es requerido
             </div>
-            <span *ngIf="!modoEditar">{{ vehiculo?.modelo }}</span>
+            <span *ngIf="!modoEditar">{{ vehiculo.modelo }}</span>
           </div>
         </div>
         <!-- Año -->
@@ -53,7 +53,7 @@
             <div *ngIf="esAnioInvalido" class="invalid-feedback animation-class">
               El Año es requerido y debe ser un número
             </div>
-            <span *ngIf="!modoEditar">{{ vehiculo?.anio }}</span>
+            <span *ngIf="!modoEditar">{{ vehiculo.anio }}</span>
           </div>
         </div>
         <!-- Kilometraje -->
@@ -66,7 +66,7 @@
             <div *ngIf="esKilometrajeInvalido" class="invalid-feedback animation-class">
               El Kilometraje es requerido y debe ser un número
             </div>
-            <span *ngIf="!modoEditar">{{ vehiculo?.kilometraje }}</span>
+            <span *ngIf="!modoEditar">{{ vehiculo.kilometraje }}</span>
           </div>
         </div>
         <!-- Precio -->
@@ -79,7 +79,7 @@
             <div *ngIf="esPrecioInvalido" class="invalid-feedback animation-class">
               El Precio es requerido y debe ser un número con dos decimales
             </div>
-            <span *ngIf="!modoEditar">{{ vehiculo?.precio | currency }}</span>
+            <span *ngIf="!modoEditar">{{ vehiculo.precio | currency }}</span>
           </div>
         </div>
 
@@ -89,7 +89,7 @@
           <div class="col-md-9 col-sm-8">
             <input type="url" class="form-control" id="inputFoto" [ngModel]="vehiculo?.foto"
                    (ngModelChange)="vehiculo.foto=$event" *ngIf="modoEditar">
-            <span *ngIf="!modoEditar">{{ vehiculo?.foto }}</span>
+            <span *ngIf="!modoEditar">{{ vehiculo.foto }}</span>
           </div>
         </div>
 
